--- a/dnspod-ddns.service
+++ b/dnspod-ddns.service
@@ -7,8 +7,8 @@ User=ddns
 NoNewPrivileges=true
 WorkingDirectory=/home/ddns/dnspod-ddns/
 ExecStart=/usr/bin/python3 /home/ddns/dnspod-ddns/main.py
-Restart=on-failure
-RestartPreventExitStatus=23
+Restart=always
+RestartSec=30
 
 [Install]
 WantedBy=multi-user.target
